fix: removing MaxPermSize option from gradle (obsolete)